LPS-111812 Fix vertical align

--- a/modules/apps/ratings/ratings-taglib/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/ratings/ratings-taglib/src/main/resources/META-INF/resources/css/main.scss
@@ -4,6 +4,10 @@
 .ratings {
 	.btn {
 		overflow: hidden;
+
+		.inline-item .animated-counter {
+			font-size: 0.875rem;
+		}
 	}
 
 	.animated-counter {
